--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<title>Splat ECS Starter Project</title>
+	<title>Morning Ritual by Two Scoop Games</title>
 
 		<style type="text/css">
 		html, body {
@@ -32,5 +32,16 @@
 <body>
 	<canvas id="canvas" />
 	<script type="text/javascript" src="index.js"></script>
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48152351-16', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
